--- a/package.json
+++ b/package.json
@@ -4,10 +4,8 @@
   "description": "This is the back-end for brainflix project",
   "main": "index.js",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "test": "test",
+    "start": "nodemon index.js"
   },
   "author": "aung-naing",
   "license": "ISC",
